gcc/testsuite/rust/rustc/ui/label/label-static.rs
fn main() {
    'static: loop { // { dg-error "" "" { target *-*-* } }
        break 'static // { dg-error "" "" { target *-*-* } }
    }
}

